add default text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 <body>
 
   <header></header>
-  <main></main>
+  <main>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias corrupti sit perferendis iste odio repellendus
+      corporis. Eaque quaerat aspernatur aut voluptates vitae, possimus harum quos reiciendis, magnam deserunt totam
+      enim!
+    </p>
+  </main>
   <footer></footer>
 
 </body>
