--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lesson 3</title>
+  <title>Lesson №</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body class="body">
 
   <header></header>
   <main>
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias corrupti sit perferendis iste odio repellendus
-      corporis. Eaque quaerat aspernatur aut voluptates vitae, possimus harum quos reiciendis, magnam deserunt totam
-      enim!
-    </p>
+    <section>
+      <h1>Home work #_</h1>
+    </section>
   </main>
   <footer></footer>
 
