--- a/index.html
+++ b/index.html
@@ -6,18 +6,105 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lesson №</title>
+  <!-- <link rel="stylesheet" href="./fonts/font.css"> -->
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body class="body">
 
-  <header></header>
+  <header>
+    <div class="container">
+      <nav>
+        <a href="#">Home</a>
+      </nav>
+    </div>
+  </header>
   <main>
-    <section>
-      <h1>Home work #_</h1>
+    <section class="section1">
+      <div class="container">
+        <!-- <h1>Home work #_</h1> -->
+        <div class="card">
+          <img src="./images/beautiful.webp" alt="beautiful">
+          <h2>Lorem, ipsum dolor.</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet iste cupiditate id blanditiis officia velit.
+          </p>
+        </div>
+        <div class="card">
+          <img src="./images/beautiful.webp" alt="beautiful">
+          <h2>Lorem, ipsum dolor.</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet iste cupiditate id blanditiis officia velit.
+          </p>
+        </div>
+        <div class="card">
+          <img src="./images/beautiful.webp" alt="beautiful">
+          <h2>Lorem, ipsum dolor.</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet iste cupiditate id blanditiis officia velit.
+          </p>
+        </div>
+        <div class="card">
+          <img src="./images/beautiful.webp" alt="beautiful">
+          <h2>Lorem, &gt; ipsum dolor.</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet iste cupiditate id blanditiis officia velit.
+          </p>
+        </div>
+        <div class="card">
+          <img src="./images/beautiful.webp" alt="beautiful">
+          <h2>Lorem, ipsum dolor.</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet iste cupiditate id blanditiis officia velit.
+          </p>
+        </div>
+        <div class="card">
+          <img src="./images/beautiful.webp" alt="beautiful">
+          <h2 class="title">Lorem, ipsum dolor.</h2>
+          <p class="description">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet iste cupiditate id blanditiis officia velit.
+          </p>
+        </div>
+        <div class="wrapper">
+          <div class="square">1</div>
+          <div class="square small">2</div>
+          <div class="square small">3</div>
+          <div class="square small">4</div>
+          <img src="./images/beautiful.webp" alt="beautiful" width="300">
+          <img src="./images/beautiful.webp" alt="beautiful" width="300">
+          <div class="clearfix"></div>
+        </div>
+
+        <p class="class1 class3 hidden">
+
+          Lorem ipsum dolor sit amet consectetur <span class="class2">adipisicing elit. Accusantium suscipit</span>
+          magnam ut tempora exercitationem?
+          Explicabo nam blanditiis est quam cumque expedita neque provident, impedit praesentium consectetur voluptatem
+          laudantium debitis dolores totam amet itaque eius officiis, mollitia nemo. Earum, enim! Maxime ex obcaecati,
+          asperiores sint ratione amet dicta magni recusandae fuga harum, ab expedita quis quia. Impedit, voluptatem
+          fugiat atque delectus eaque ut laboriosam expedita perspiciatis vitae, omnis eos dolorum praesentium in!
+          Soluta,
+          amet iste? Est tempora, distinctio modi aut laborum consequuntur enim, labore consequatur odio aspernatur ut.
+          Quod harum tenetur sit earum tempora, iure dolorum commodi mollitia, nesciunt vero odio natus quas quos? Quia
+          pariatur maiores suscipit mollitia, reprehenderit numquam natus at sunt ab necessitatibus ut nemo earum
+          dignissimos inventore voluptatem tempore, rem ipsa, debitis vero. Facilis sapiente unde reprehenderit
+          consectetur sint quae obcaecati fugiat officia. Accusamus eligendi corrupti iusto ab sint doloribus animi
+          tempora voluptates dolor beatae! Repellendus odit laudantium provident fuga? Corporis autem porro expedita,
+          mollitia impedit libero officia. Neque voluptatem quas distinctio aut fugit, dolores, quod culpa possimus
+          cumque
+          quo nostrum eligendi dicta esse quam? Laborum magni officiis, itaque, cupiditate tenetur doloremque nobis
+          debitis repudiandae laudantium vero consectetur eligendi, similique possimus quia! Illo ipsam sint officia
+          blanditiis?
+        </p>
+      </div>
+
     </section>
   </main>
-  <footer></footer>
+  <footer>
+    <div class="container">
+      <p>copy</p>
+    </div>
+  </footer>
 
 </body>
 
