--- a/index.html
+++ b/index.html
@@ -5,25 +5,178 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lesson №</title>
+  <title>Beauty</title>
   <link rel="stylesheet" href="./fonts/font.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body class="body">
 
-  <header>
-    <div class="container">
-      <nav>
-        <a href="#">Home</a>
-      </nav>
+  <header class="header">
+    <div class="upper-line bg-secondary">
+      <div class="container">
+        <nav class="navigation flex justify-center">
+          <a href="#">Доставка</a>
+          <a href="#">Оплата</a>
+          <a href="#">Отзывы</a>
+          <a href="#">Вопрос - ответ</a>
+          <a href="#">Контакты</a>
+        </nav>
+      </div>
+    </div>
+    <div class="center">
+      <div class="container flex items-center justify-between">
+        <div class="logo-wrap">
+          <a href="/" class="logo flex items-center">
+            <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g clip-path="url(#clip0_1_22)">
+                <path d="M57.2204 25.3732L46.6873 35.9064L50.7656 39.9847L61.2987 29.4515L57.2204 25.3732Z"
+                  fill="#F13C6E" />
+                <path d="M35.9094 46.7065L25.3762 57.2396L29.4545 61.3179L39.9877 50.7848L35.9094 46.7065Z"
+                  fill="#F13C6E" />
+                <path d="M50.5173 18.706L39.9842 29.2391L44.0625 33.3174L54.5956 22.7843L50.5173 18.706Z"
+                  fill="#F13C6E" />
+                <path d="M29.2355 40.0106L18.7023 50.5437L22.7806 54.622L33.3138 44.0889L29.2355 40.0106Z"
+                  fill="#F13C6E" />
+                <path d="M22.7576 25.3729L18.6793 29.4512L29.2124 39.9843L33.2907 35.906L22.7576 25.3729Z"
+                  fill="#F13C6E" />
+                <path d="M29.454 18.6989L25.3757 22.7772L35.9089 33.3104L39.9872 29.2321L29.454 18.6989Z"
+                  fill="#F13C6E" />
+                <path d="M50.7592 39.9809L46.6809 44.0592L57.2141 54.5923L61.2924 50.514L50.7592 39.9809Z"
+                  fill="#F13C6E" />
+                <path d="M44.092 46.6842L40.0137 50.7625L50.5468 61.2956L54.6251 57.2173L44.092 46.6842Z"
+                  fill="#F13C6E" />
+                <path
+                  d="M54.6058 65.3942L50.5394 61.3278L40 71.8672L29.4606 61.3278L25.3942 65.3942L40 80L54.6058 65.3942Z"
+                  fill="#EFEFEF" />
+                <path
+                  d="M18.6722 29.4606L14.6058 25.3942L0 40L14.6058 54.6058L18.6722 50.5394L8.13278 40L18.6722 29.4606Z"
+                  fill="#EFEFEF" />
+                <path
+                  d="M65.3942 25.3942L61.3278 29.4606L71.8672 40L61.3278 50.5394L65.3942 54.6058L80 40L65.3942 25.3942Z"
+                  fill="#EFEFEF" />
+                <path
+                  d="M50.5394 18.6722L54.6058 14.6058L40 0L25.3942 14.6058L29.4606 18.6722L40 8.13278L50.5394 18.6722Z"
+                  fill="#EFEFEF" />
+              </g>
+              <defs>
+                <clipPath id="clip0_1_22">
+                  <rect width="80" height="80" fill="white" />
+                </clipPath>
+              </defs>
+            </svg>
+            <span class="brand">
+              Beauty
+            </span>
+          </a>
+        </div>
+        <div class="callback flex items-center">
+          <a href="tel:88121234567" class="phone">8 (812) 123-45-67</a>
+          <button class="btn btn-default">
+            Обратный звонок
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="bottom-line">
+      <div class="container">
+        <nav class="navigation flex justify-center">
+          <a href="#">Парикмахерская</a>
+          <a href="#">Барбершоп</a>
+          <a href="#">Маникюр</a>
+          <a href="#">Педикюр</a>
+          <a href="#">Массаж</a>
+          <a href="#">Мебель</a>
+        </nav>
+      </div>
     </div>
   </header>
   <main>
-    <section class="section">
+    <section class="first-section bg-primary">
       <div class="container">
-        <h1>Home work #_</h1>
-        <img src="./images/beautiful.webp" alt="beautiful" width="300">
+        <div class="text-wrap">
+          <h1 class="main-title">Супер кресло</h1>
+          <p class="description">
+            Текст акции всегда отражает суть, а не просто
+            болтовню, поэтому внимательнее
+          </p>
+          <a href="#" class="btn btn-white">Подробнее</a>
+        </div>
+      </div>
+    </section>
+    <section class="main-content bg-secondary">
+      <div class="container">
+        <h2 class="section-title">Специальные предложения</h2>
+        <div class="card-wrap flex justify-between">
+          <div class="card flex flex-col">
+            <img class="image" src="./images/Chair.png" alt="Chair">
+            <p class="description flex-1">
+              Парикмахерское кресло «Норм» гидравлическое
+            </p>
+            <p class="price">9 900 ₽</p>
+            <a href="#" class="link btn btn-red btn-small">Купить</a>
+          </div>
+          <div class="card flex flex-col">
+            <img class="image" src="./images/Chair.png" alt="Chair">
+            <p class="description flex-1">
+              Парикмахерское кресло «Норм» гидравлическое
+            </p>
+            <p class="price">9 900 ₽</p>
+            <a href="#" class="link btn btn-red btn-small">Купить</a>
+          </div>
+          <div class="card flex flex-col">
+            <img class="image" src="./images/Chair.png" alt="Chair">
+            <p class="description flex-1">
+              Парикмахерское кресло «Норм» гидравлическое
+            </p>
+            <p class="price">9 900 ₽</p>
+            <a href="#" class="link btn btn-red btn-small">Купить</a>
+          </div>
+          <div class="card flex flex-col">
+            <img class="image" src="./images/Chair.png" alt="Chair">
+            <p class="description flex-1">
+              Парикмахерское кресло «Норм» гидравлическое
+            </p>
+            <p class="price">9 900 ₽</p>
+            <a href="#" class="link btn btn-red btn-small">Купить</a>
+          </div>
+        </div>
+
+        <h2 class="section-title">Вы недавно смотрели</h2>
+        <div class="card-wrap flex justify-between">
+          <div class="card flex flex-col">
+            <img class="image" src="./images/Chair.png" alt="Chair">
+            <p class="description flex-1">
+              Парикмахерское кресло «Норм» гидравлическое
+            </p>
+            <p class="price">9 900 ₽</p>
+            <a href="#" class="link btn btn-red btn-small">Купить</a>
+          </div>
+          <div class="card flex flex-col">
+            <img class="image" src="./images/Chair.png" alt="Chair">
+            <p class="description flex-1">
+              Парикмахерское кресло «Норм» гидравлическое
+            </p>
+            <p class="price">9 900 ₽</p>
+            <a href="#" class="link btn btn-red btn-small">Купить</a>
+          </div>
+          <div class="card flex flex-col">
+            <img class="image" src="./images/Chair.png" alt="Chair">
+            <p class="description flex-1">
+              Парикмахерское кресло «Норм» гидравлическое
+            </p>
+            <p class="price">9 900 ₽</p>
+            <a href="#" class="link btn btn-red btn-small">Купить</a>
+          </div>
+          <div class="card flex flex-col">
+            <img class="image" src="./images/Chair.png" alt="Chair">
+            <p class="description flex-1">
+              Парикмахерское кресло «Норм» гидравлическое
+            </p>
+            <p class="price">9 900 ₽</p>
+            <a href="#" class="link btn btn-red btn-small">Купить</a>
+          </div>
+        </div>
       </div>
     </section>
   </main>
